start new contant

--- a/index.html
+++ b/index.html
@@ -491,10 +491,10 @@
         <div class=" absolute inset-0  bg-white/65 "></div>
         <div class="relative z-10 flex flex-col items-center justify-center h-full ">
           <p class="text-[22px] text-[#001A57] font-medium my-5">Company Success</p>
-          <h1 class="text-[42px] text-[#232323] font-medium">Some fun facts about our consulting</h1>
+          <h1 class=" text-center text-[32px] md:text-[42px]  text-[#232323] font-medium">Some fun facts about our consulting</h1>
           
-          <div class="flex gap-20 mt-12 text-center ">
-              <div>
+          <div class="grid grid-cols-2 md:grid-cols-4 gap-20 mt-12 text-center ">
+            <div>
                   <h1 class="text-7xl font-light text-[#001A57] ">30<span class="text-[42px] font-light">+</span></h1>
                   <p>Years of Excellence</p>
               </div>
@@ -510,8 +510,17 @@
                   <h1 class="text-7xl font-light text-[#001A57]">24</h1>
                   <p>Consultants</p>
               </div>
+              
           </div>
           <button class="mt-16 bg-[#001A57] hover:bg-[#000F32] cursor-pointer py-4 px-10 rounded-lg text-white">VIEW CASE STUDIES</button>
+        </div>
+    </section>
+
+    <section>
+        <div class="flex flex-col items-center">
+          <h1 class="text-4xl font-bold text-[#232323]">FREE CONSULTATION</h1>
+          <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
+          <p class="text-gray-500 text-[17px] max-w-[420px] md:max-w-[700px]">A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
         </div>
     </section>
 
