--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="mt-20 h-screen">
         <div class="flex flex-col items-center">
           <h1 class="text-4xl font-bold text-[#232323]">FREE CONSULTATION</h1>
           <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
