start new section

--- a/index.html
+++ b/index.html
@@ -522,7 +522,16 @@
           <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
           <p class="text-gray-500 text-[17px] max-w-[420px] md:max-w-[700px]">A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
         </div>
+
+        <div class=" min-h-screen ">
+          <div class="w-1/2">
+            <img class="" src="./image/contact-image/asset 31.jpeg" alt="">
+          </div>
+
+        </div>
     </section>
+
+
 
     <script src="main.js"></script>
   </body>
