--- a/index.html
+++ b/index.html
@@ -545,31 +545,70 @@
         </p>
       </div>
 
-      <div class="min-h-screen flex items-center justify-center ">
-        <div class="flex flex-col md:flex-row  shadow-lg max-w-6xl w-full rounded-lg bg-gray-50  overflow-hidden">
-          <div class="w-1/2  md:block">
-            <img class="w-full h-full"src="./image/contact-image/asset 31.jpeg"alt=""/>
+      <div class="min-h-screen flex items-center justify-center px-4 mt-12">
+        <div
+          class="flex flex-col md:flex-row shadow-lg max-w-6xl w-full rounded-lg bg-gray-50 overflow-hidden"
+        >
+          <div class="md:w-1/2 w-full">
+            <img
+              class="w-full md:h-full h-[250px] object-cover "
+              src="./image/contact-image/asset 31.jpeg"
+              alt=""
+            />
           </div>
-          
-          <div class="md:w-1/2 p-16 w-full">
-              <form class="space-y-8 "> 
-            <div class="flex flex-col md:flex-row md:space-x-5 space-y-5 md:space-y-0  ">
-                <input class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition p-2 md:w-[300px] w-full  " type="Name" name=""  placeholder="Name*" id="">
-                <input class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition md:w-[300px] w-full  " type="Name" name=""  placeholder="Phone*" id="">
-            </div>
-            <div class="flex flex-col md:flex-row md:space-x-5 space-y-5 md:space-y-0 mt-4 md:mt-8">
-                <select class="outline-none border-b border-gray-300 hover:border-black transition p-3 md:w-[300px] w-full text-[#7C7D7D] text-[15px]" name="" id="">
-                  <option class=" " value="">Service you’re looking for?</option>
+
+          <div class="md:w-1/2  py-6 px-4 w-full">
+            <form class="space-y-8">
+              <div
+                class="flex flex-col md:flex-row md:space-x-5 space-y-8 md:space-y-0"
+              >
+                <input
+                  class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition p-2 w-full"
+                  type="Name"
+                  name=""
+                  placeholder="Name*"
+                  id=""
+                />
+                <input
+                  class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition w-full"
+                  type="Name"
+                  name=""
+                  placeholder="Phone*"
+                  id=""
+                />
+              </div>
+              <div
+                class="flex flex-col md:flex-row md:space-x-5 space-y-8 md:space-y-0 mt-8"
+              >
+              <input
+                  class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition w-full"
+                  placeholder="Email"
+                  type="text"
+                />
+                <select
+                  class="outline-none border-b border-gray-300 hover:border-black transition p-3 w-full text-[#7C7D7D] text-[15px]"
+                  name=""
+                  id=""
+                >
+                  <option class=" " value="">
+                    Service you’re looking for?
+                  </option>
                   <option value="Business">Business Services</option>
                   <option value="Consumer">Consumer Product</option>
                   <option value="Software">Software Research</option>
                 </select>
-                
-                <input class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition md:w-[300px] w-full" placeholder="Email" type="text">
 
-            </div>
-
-          </form>
+              </div>
+              <div>
+                <textarea
+                  class="outline-none border-b border-gray-300 hover:border-black transition p-3 w-full h-32 resize-none"
+                  name="message"
+                  placeholder="Message*"
+                  required
+                ></textarea>
+              </div>
+              <button class="bg-[#001A57] hover:bg-[#000F32] px-9 py-3 rounded-lg text-white cursor-pointer">GET A QUOTES</button>
+            </form>
           </div>
         </div>
       </div>
