start new section

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </section>
 
     <section
-      id="innovative"
+      id="service"
       class="h-[70vh] md:h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed"
     >
       <!-- overlay -->
@@ -416,7 +416,7 @@
         </h3>
       </div>
     </section>
-    <section>
+    <section id="info">
       <div
         class="bg-[url('/image/fixed-image/asset-29.jpeg')] bg-cover bg-center h-[100vh] bg-fixed relative"
       >
@@ -435,7 +435,7 @@
       </div>
     </section>
 
-    <section class="mt-24">
+    <section id="team" class="mt-24">
       <div class="text-center flex flex-col items-center">
         <h1 class="text-4xl font-bold text-[#232323]">OUR TEAM</h1>
         <hr class="w-9 border-t-4 border-gray-300 my-4 rounded-2xl" />
@@ -486,7 +486,7 @@
       </div>
     </section>
 
-    <section class="relative min-h-[60vh] md:min-h-[100vh] mt-20">
+    <section id="map" class="relative min-h-[60vh] md:min-h-[100vh] mt-20">
       <div
         class="absolute inset-0 bg-[url('/image/map_pattener/1.1.png')] bg-no-repeat bg-center bg-contain"
       ></div>
@@ -535,7 +535,7 @@
       </div>
     </section>
 
-    <section class="mt-20 h-screen">
+    <section id="contact" class="mt-20 ">
       <div class="flex flex-col items-center">
         <h1 class="text-4xl font-bold text-[#232323]">FREE CONSULTATION</h1>
         <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
@@ -611,6 +611,21 @@
             </form>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="pattener" class="mt-7">
+      <div class="bg-[#F8FAFF] mt-7 h-[180px] md:h-[100px]">
+        <div>
+            <h1>OUR PARTNERS</h1>
+            <img src="/image/PARTNERS-icon/asset 19.png" alt="">
+            <img src="/image/PARTNERS-icon/asset 20.png" alt="">
+            <img src="/image/PARTNERS-icon/asset 21.png" alt="">
+            <img src="/image/PARTNERS-icon/asset 22.png" alt="">
+            <img src="/image/PARTNERS-icon/asset 23.png" alt="">
+            
+          </div>
+         
       </div>
     </section>
 
