start make responsive

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
       </div>
     </section>
 
-    <section id="contact" class="mt-20 ">
+    <section id="contact" class="mt-20">
       <div class="flex flex-col items-center">
         <h1 class="text-4xl font-bold text-[#232323]">FREE CONSULTATION</h1>
         <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
@@ -551,13 +551,13 @@
         >
           <div class="md:w-1/2 w-full">
             <img
-              class="w-full md:h-full h-[250px] object-cover "
+              class="w-full md:h-full h-[250px] object-cover"
               src="./image/contact-image/asset 31.jpeg"
               alt=""
             />
           </div>
 
-          <div class="md:w-1/2  py-6 px-4 w-full">
+          <div class="md:w-1/2 py-6 px-4 w-full">
             <form class="space-y-8">
               <div
                 class="flex flex-col md:flex-row md:space-x-5 space-y-8 md:space-y-0"
@@ -580,7 +580,7 @@
               <div
                 class="flex flex-col md:flex-row md:space-x-5 space-y-8 md:space-y-0 mt-8"
               >
-              <input
+                <input
                   class="outline-0 border-b-[1px] border-gray-300 hover:border-black transition w-full"
                   placeholder="Email"
                   type="text"
@@ -597,7 +597,6 @@
                   <option value="Consumer">Consumer Product</option>
                   <option value="Software">Software Research</option>
                 </select>
-
               </div>
               <div>
                 <textarea
@@ -607,7 +606,11 @@
                   required
                 ></textarea>
               </div>
-              <button class="bg-[#001A57] hover:bg-[#000F32] px-9 py-3 rounded-lg text-white cursor-pointer">GET A QUOTES</button>
+              <button
+                class="bg-[#001A57] hover:bg-[#000F32] px-9 py-3 rounded-lg text-white cursor-pointer"
+              >
+                GET A QUOTES
+              </button>
             </form>
           </div>
         </div>
@@ -616,16 +619,16 @@
 
     <section id="pattener" class="mt-7">
       <div class="bg-[#F8FAFF] mt-7 h-[180px] md:h-[100px]">
-        <div>
-            <h1>OUR PARTNERS</h1>
+        <div class="flex flex-col md:flex-row items-center justify-between px-7  md:gap-40 ">
+          <h1 class="text-xl font-medium text-[#232323] max-w-none md:max-w-[100px]">OUR PARTNERS</h1>
+          <div class="flex gap-20 mt-12">
             <img src="/image/PARTNERS-icon/asset 19.png" alt="">
             <img src="/image/PARTNERS-icon/asset 20.png" alt="">
-            <img src="/image/PARTNERS-icon/asset 21.png" alt="">
-            <img src="/image/PARTNERS-icon/asset 22.png" alt="">
-            <img src="/image/PARTNERS-icon/asset 23.png" alt="">
-            
+            <img class="hidden md:block" src="/image/PARTNERS-icon/asset 21.png" alt="">
+            <img class="hidden md:block" src="/image/PARTNERS-icon/asset 22.png" alt="">
+            <img class="hidden md:block" src="/image/PARTNERS-icon/asset 23.png" alt="">
           </div>
-         
+        </div>
       </div>
     </section>
 
