--- a/index.html
+++ b/index.html
@@ -618,10 +618,10 @@
     </section>
 
     <section id="pattener" class="mt-7">
-      <div class="bg-[#F8FAFF] mt-7 h-[180px] md:h-[100px]">
-        <div class="flex flex-col md:flex-row items-center justify-between px-7  md:gap-40 ">
+      <div class="bg-[#F8FAFF] mt-7 h-[180px] md:h-[100px] py-6">
+        <div class="flex flex-col md:flex-row items-center justify-between px-[75px]  md:gap-40 ">
           <h1 class="text-xl font-medium text-[#232323] max-w-none md:max-w-[100px]">OUR PARTNERS</h1>
-          <div class="flex gap-20 mt-12">
+          <div class="flex flex-row md:flex-wrap justify-center items-center gap-20 md:m-0 mt-12 ">
             <img src="/image/PARTNERS-icon/asset 19.png" alt="">
             <img src="/image/PARTNERS-icon/asset 20.png" alt="">
             <img class="hidden md:block" src="/image/PARTNERS-icon/asset 21.png" alt="">
