--- a/index.html
+++ b/index.html
@@ -632,6 +632,10 @@
       </div>
     </section>
 
+    <section id="footer">
+
+    </section>
+
     <script src="main.js"></script>
   </body>
 </html>
