--- a/index.html
+++ b/index.html
@@ -633,7 +633,15 @@
     </section>
 
     <section id="footer">
-      <div class="bg-[#001A57] h-screen">
+      <div class="bg-[#001648] h-[90vh]">
+
+        <div class="grid grid-cols-1 md:grid-cols-4">
+          <div>
+            <h1>About OUR Consulting</h1>
+            <p>That started from this tropic port aboard this tiny ship today still want by theam government they survive on up to thetre east side to a deluxe as soldiers of artics fortune.</p>
+            <h3> Any Queries : (+1) 234 567 900</h3>
+          </div>
+        </div>
 
       </div>
 
