--- a/index.html
+++ b/index.html
@@ -633,13 +633,13 @@
     </section>
 
     <section id="footer">
-      <div class="bg-[#001648] h-[90vh]">
+      <div class="bg-[#001648] h-[90vh] flex justify-center items-center ">
 
-        <div class="grid grid-cols-1 md:grid-cols-4">
-          <div>
+        <div class="grid grid-cols-1 md:grid-cols-4 max-w-7xl py-6 px-8 ">
+          <div class="text-white flex flex-col space-y-3">
             <h1>About OUR Consulting</h1>
             <p>That started from this tropic port aboard this tiny ship today still want by theam government they survive on up to thetre east side to a deluxe as soldiers of artics fortune.</p>
-            <h3> Any Queries : (+1) 234 567 900</h3>
+            <h3 ><span><i class="fa-solid fa-phone-volume"></i></span> Any Queries : (+1) 234 567 900</h3>
           </div>
         </div>
 
