--- a/index.html
+++ b/index.html
@@ -619,32 +619,67 @@
 
     <section id="pattener" class="mt-7">
       <div class="bg-[#F8FAFF] mt-7 h-[180px] md:h-[100px] py-6">
-        <div class="flex flex-col md:flex-row items-center justify-between px-[75px]  md:gap-40 ">
-          <h1 class="text-xl font-medium text-[#232323] max-w-none md:max-w-[100px]">OUR PARTNERS</h1>
-          <div class="flex flex-row md:flex-wrap justify-center items-center gap-20 md:m-0 mt-12 ">
-            <img src="/image/PARTNERS-icon/asset 19.png" alt="">
-            <img src="/image/PARTNERS-icon/asset 20.png" alt="">
-            <img class="hidden md:block" src="/image/PARTNERS-icon/asset 21.png" alt="">
-            <img class="hidden md:block" src="/image/PARTNERS-icon/asset 22.png" alt="">
-            <img class="hidden md:block" src="/image/PARTNERS-icon/asset 23.png" alt="">
+        <div
+          class="flex flex-col md:flex-row items-center justify-between px-[75px] md:gap-40"
+        >
+          <h1
+            class="text-xl font-medium text-[#232323] max-w-none md:max-w-[100px]"
+          >
+            OUR PARTNERS
+          </h1>
+          <div
+            class="flex flex-row md:flex-wrap justify-center items-center gap-20 md:m-0 mt-12"
+          >
+            <img src="/image/PARTNERS-icon/asset 19.png" alt="" />
+            <img src="/image/PARTNERS-icon/asset 20.png" alt="" />
+            <img
+              class="hidden md:block"
+              src="/image/PARTNERS-icon/asset 21.png"
+              alt=""
+            />
+            <img
+              class="hidden md:block"
+              src="/image/PARTNERS-icon/asset 22.png"
+              alt=""
+            />
+            <img
+              class="hidden md:block"
+              src="/image/PARTNERS-icon/asset 23.png"
+              alt=""
+            />
           </div>
         </div>
       </div>
     </section>
 
     <section id="footer">
-      <div class="bg-[#001648] h-[90vh] flex justify-center items-center ">
-
-        <div class="grid grid-cols-1 md:grid-cols-4 max-w-7xl py-6 px-8 ">
+      <div class="bg-[#001648] h-[90vh] flex justify-center items-center">
+        <div class="grid grid-cols-1 md:grid-cols-4 max-w-7xl py-6 px-8">
           <div class="text-white flex flex-col space-y-3">
-            <h1>About OUR Consulting</h1>
-            <p>That started from this tropic port aboard this tiny ship today still want by theam government they survive on up to thetre east side to a deluxe as soldiers of artics fortune.</p>
-            <h3 ><span><i class="fa-solid fa-phone-volume"></i></span> Any Queries : (+1) 234 567 900</h3>
+            <h1 class="text-xl font-bold">About OUR Consulting</h1>
+            <p class="max-w-[270px] text-gray-400">
+              That started from this tropic port aboard this tiny ship today
+              still want by theam government they survive on up to thetre east
+              side to a deluxe as soldiers of artics fortune.
+            </p>
+            <h3 class="text-lg">
+              <span class="pr-2"><i class="fa-solid fa-phone-volume"></i></span>
+              Any Queries : (+1) 234 567 900
+            </h3>
+          </div>
+
+          <div>
+            <h1>RECENT POSTS</h1>
+            <div>
+              <img src="./image/footer-image/asset 24.jpeg" alt="" />
+              <div>
+                <p>Till wanted by theam govern they survive as soldiers.</p>
+                <h3>Feb 06, 2018</h3>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
-
     </section>
 
     <script src="main.js"></script>
