second grid and style

--- a/index.html
+++ b/index.html
@@ -653,11 +653,11 @@
     </section>
 
     <section id="footer">
-      <div class="bg-[#001648] h-[90vh] flex justify-center items-center">
-        <div class="grid grid-cols-1 md:grid-cols-4 max-w-7xl py-6 px-8">
-          <div class="text-white flex flex-col space-y-3">
+      <div class="bg-[#001648] h-screen flex justify-center items-center">
+        <div class="grid grid-cols-1 md:grid-cols-4 max-w-7xl py-6 px-6 gap-y-14 gap-3  ">
+          <div class="text-white flex flex-col space-y-6 ">
             <h1 class="text-xl font-bold">About OUR Consulting</h1>
-            <p class="max-w-[270px] text-gray-400">
+            <p class="md:max-w-[270px]  text-gray-400 md:text-lg">
               That started from this tropic port aboard this tiny ship today
               still want by theam government they survive on up to thetre east
               side to a deluxe as soldiers of artics fortune.
@@ -668,15 +668,27 @@
             </h3>
           </div>
 
-          <div>
-            <h1>RECENT POSTS</h1>
-            <div>
-              <img src="./image/footer-image/asset 24.jpeg" alt="" />
+          <div class="flex flex-col space-y-4 ">
+            <h1 class="text-white text-xl font-bold">RECENT POSTS</h1>
+            <div class="text-white flex gap-5 mt-4">
+              <img  src="./image/footer-image/asset 24.jpeg" alt="" />
               <div>
-                <p>Till wanted by theam govern they survive as soldiers.</p>
-                <h3>Feb 06, 2018</h3>
+                <p class="text-[16px]">Till wanted by theam govern they survive as soldiers.</p>
+                <h3 class="text-gray-400 italic text-sm mt-2"> <span class="pr-2"><i class="fa-solid fa-calendar"></i></span>Feb 06, 2018</h3>
               </div>
             </div>
+            <div class="h-px bg-gray-500/40"></div>
+
+            <div class="text-white flex gap-5 mt-4">
+              <img  src="./image/footer-image/asset 25.jpeg" alt="" />
+              <div>
+                <p class="text-[16px]">Till wanted by theam govern they survive as soldiers.</p>
+                <h3 class="text-gray-400 italic text-sm mt-2"> <span class="pr-2"><i class="fa-solid fa-calendar"></i></span>Mar 20, 2018</h3>
+              </div>
+            </div>
+           
+
+
           </div>
         </div>
       </div>
