end section footer

--- a/index.html
+++ b/index.html
@@ -700,8 +700,38 @@
             <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Software Research</p>
             <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Quality Resourcing</p>
           </div>
+
+
+          <div class="text-gray-400 flex flex-col space-y-5 ">
+            <h1 class="text-xl font-bold text-white mb-9">NEWSLETTER</h1>
+            <input
+                  class="outline-0 border-b-[1px] border-gray-300  p-2 w-full"
+                  type="Name"
+                  name=""
+                  placeholder="Name*"
+                  id=""
+                />
+            <input
+                  class="outline-0 border-b-[1px] border-gray-30 p-2 w-full"
+                  placeholder="Email"
+                  type="text"
+                />
+
+                <button class="bg-white text-[#001138] px-12 py-4 rounded-lg hover:bg-[#001138] hover:text-white transition cursor-pointer">SUBSCRIBE</button>
+          </div>
         </div>
       </div>
+    </section>
+
+    <section id="Copyright">
+      <h1>© Copyrights 2018. All Rights Reserved.</h1>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
     </section>
 
     <script src="main.js"></script>
