--- a/index.html
+++ b/index.html
@@ -654,10 +654,12 @@
 
     <section id="footer" class="">
       <div class="bg-[#001648] h-screen flex justify-center items-center">
-        <div class="grid grid-cols-1 md:grid-cols-4 max-w-7xl bg-[#001648]  py-6 px-6 gap-y-14 gap-7  ">
-          <div class="text-white flex flex-col space-y-6 ">
+        <div
+          class="grid grid-cols-1 md:grid-cols-4 max-w-7xl bg-[#001648] py-6 px-6 gap-y-14 gap-7"
+        >
+          <div class="text-white flex flex-col space-y-6">
             <h1 class="text-xl font-bold">About OUR Consulting</h1>
-            <p class="md:max-w-[270px]  text-gray-400 md:text-lg">
+            <p class="md:max-w-[270px] text-gray-400 md:text-lg">
               That started from this tropic port aboard this tiny ship today
               still want by theam government they survive on up to thetre east
               side to a deluxe as soldiers of artics fortune.
@@ -668,70 +670,109 @@
             </h3>
           </div>
 
-          <div class="flex flex-col space-y-4  ">
+          <div class="flex flex-col space-y-4">
             <h1 class="text-white text-xl font-bold">RECENT POSTS</h1>
             <div class="text-white flex gap-5 mt-4">
-              <img class="w-22 h-18 rounded-[4px]"  src="./image/footer-image/asset 24.jpeg" alt="" />
+              <img
+                class="w-22 h-18 rounded-[4px]"
+                src="./image/footer-image/asset 24.jpeg"
+                alt=""
+              />
               <div>
-                <p class="text-[16px] min-w-[220px]">Till wanted by theam govern they survive as soldiers.</p>
-                <h3 class="text-gray-400 italic text-sm mt-2"> <span class="pr-2"><i class="fa-solid fa-calendar"></i></span>Feb 06, 2018</h3>
+                <p class="text-[16px] min-w-[220px]">
+                  Till wanted by theam govern they survive as soldiers.
+                </p>
+                <h3 class="text-gray-400 italic text-sm mt-2">
+                  <span class="pr-2"><i class="fa-solid fa-calendar"></i></span
+                  >Feb 06, 2018
+                </h3>
               </div>
             </div>
             <div class="h-px bg-gray-500/40"></div>
 
             <div class="text-white flex gap-5 mt-4">
-              <img class="w-22 h-18 rounded-[4px]"  src="./image/footer-image/asset 25.jpeg" alt="" />
+              <img
+                class="w-22 h-18 rounded-[4px]"
+                src="./image/footer-image/asset 25.jpeg"
+                alt=""
+              />
               <div>
-                <p class="text-[16px] max-w-[900px]">World don't move to beat of just one drum.</p>
-                <h3 class="text-gray-400 italic text-sm mt-2"> <span class="pr-2"><i class="fa-solid fa-calendar"></i></span>Mar 20, 2018</h3>
+                <p class="text-[16px] max-w-[900px]">
+                  World don't move to beat of just one drum.
+                </p>
+                <h3 class="text-gray-400 italic text-sm mt-2">
+                  <span class="pr-2"><i class="fa-solid fa-calendar"></i></span
+                  >Mar 20, 2018
+                </h3>
               </div>
             </div>
-           
-
-
           </div>
 
-          <div class=" flex flex-col space-y-3 text-gray-400   ">
-            <h1 class="text-xl font-bold text-white mb-9" ><i class="fa-regular fa-circle text-[10px] pr-5"></i> SOLUTIONS</h1>
-            <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Travel and Aviation</p>
-            <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Business Services</p>
-            <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Consumer Products</p>
-            <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Financial Services</p>
-            <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Software Research</p>
-            <p><i class="fa-regular fa-circle text-[10px] pr-5"></i> Quality Resourcing</p>
+          <div class="flex flex-col space-y-3 text-gray-400">
+            <h1 class="text-xl font-bold text-white mb-9">
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> SOLUTIONS
+            </h1>
+            <p>
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> Travel and
+              Aviation
+            </p>
+            <p>
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> Business
+              Services
+            </p>
+            <p>
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> Consumer
+              Products
+            </p>
+            <p>
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> Financial
+              Services
+            </p>
+            <p>
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> Software
+              Research
+            </p>
+            <p>
+              <i class="fa-regular fa-circle text-[10px] pr-5"></i> Quality
+              Resourcing
+            </p>
           </div>
 
-
-          <div class="text-gray-400 flex flex-col space-y-5 ">
+          <div class="text-gray-400 flex flex-col space-y-5">
             <h1 class="text-xl font-bold text-white mb-9">NEWSLETTER</h1>
             <input
-                  class="outline-0 border-b-[1px] border-gray-300  p-2 w-full"
-                  type="Name"
-                  name=""
-                  placeholder="Name*"
-                  id=""
-                />
+              class="outline-0 border-b-[1px] border-gray-300 p-2 w-full"
+              type="Name"
+              name=""
+              placeholder="Name*"
+              id=""
+            />
             <input
-                  class="outline-0 border-b-[1px] border-gray-30 p-2 w-full"
-                  placeholder="Email"
-                  type="text"
-                />
+              class="outline-0 border-b-[1px] border-gray-30 p-2 w-full"
+              placeholder="Email"
+              type="text"
+            />
 
-                <button class="bg-white text-[#001138] px-12 py-4 rounded-lg hover:bg-[#001138] hover:text-white transition cursor-pointer">SUBSCRIBE</button>
+            <button
+              class="bg-white text-[#001138] px-12 py-4 rounded-lg hover:bg-[#001138] hover:text-white transition cursor-pointer duration-700"
+            >
+              SUBSCRIBE
+            </button>
           </div>
         </div>
       </div>
     </section>
 
     <section id="Copyright">
-      <h1>© Copyrights 2018. All Rights Reserved.</h1>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-
+      <div class="bg-[#001138] flex flex-col md:flex-row justify-between items-center text-gray-400  py-5 md:px-10 px-4 ">
+        <h1>© Copyrights 2018. All Rights Reserved.</h1>
+        <ul class="flex flex-wrap md:gap-5 gap-3">
+          <li class="hover:text-white transition cursor-pointer duration-1000">About</li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">Solutions</li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">FAQ’s</li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">Contact</li>
+        </ul>
+      </div>
     </section>
 
     <script src="main.js"></script>
