update service section

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
     </section>
 
     <!-- hero cover  here -->
-    <section
-      id="hero"
+    <section id="hero"
       class="bg-gray-200 h-[60vh] md:h-[100vh] bg-[url('/image/hero-image/asset-1.jpeg')] bg-cover bg-center relative"
     >
       <div
@@ -242,7 +241,7 @@
 
     <section
       id="service"
-      class="h-[70vh] md:h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed"
+      class="h-[70vh] md:h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed mt-8 md:mt-0"
     >
       <!-- overlay -->
 
