--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       </div>
     </section>
 
-    <section id="footer" class="">
+    <section id="footer" class="h-[50vh]">
       <div class="bg-[#001648] h-screen flex justify-center items-center">
         <div
           class="grid grid-cols-1 md:grid-cols-4 max-w-7xl bg-[#001648] py-6 px-6 gap-y-14 gap-7"
