--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     </section>
 
     <section id="footer" class="">
-      <div class="bg-[#001648] h-0 md:h-screen flex justify-center items-center">
+      <div class="bg-[#001648] md:h-screen flex justify-center items-center">
         <div
           class="grid grid-cols-1 md:grid-cols-4 max-w-7xl bg-[#001648] py-6 px-6 gap-y-14 gap-7"
         >
