--- a/index.html
+++ b/index.html
@@ -763,9 +763,9 @@
     </section>
 
     <section id="Copyright">
-      <div class="bg-[#001138] flex flex-col md:flex-row justify-between items-center text-gray-400  py-5 md:px-10 px-4 ">
+      <div class="bg-[#001138] flex flex-col md:flex-row justify-between items-center text-gray-400 space-y-[1px]  py-5 md:px-10 px-4 ">
         <h1>© Copyrights 2018. All Rights Reserved.</h1>
-        <ul class="flex flex-wrap md:gap-5 gap-3">
+        <ul class="flex flex-wrap gap-5">
           <li class="hover:text-white transition cursor-pointer duration-1000">About</li>
           <li class="hover:text-white transition cursor-pointer duration-1000">Solutions</li>
           <li class="hover:text-white transition cursor-pointer duration-1000">FAQ’s</li>
