--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
       <!-- grid card -->
       <div
-        class="grid grid-cols-1 md:grid-cols-3 mt-16 px-12 space-y-6 md:space-x-6"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-16 px-12 space-y-6 md:space-x-6"
       >
         <!-- card 1 -->
         <div
@@ -341,12 +341,9 @@
             <a class="text-[#001A57] font-medium" href="#">READ MORE> </a>
           </div>
         </div>
-      </div>
-      <div
-        class="grid grid-cols-1 md:grid-cols-3 mt-8 px-12 space-y-6 md:space-x-6"
-      >
-        <!-- grid card 2 -->
-        <div
+
+
+         <div
           id="card"
           class="flex gap-5 bg-white shadow hover:shadow-lg cursor-pointer rounded-lg transition"
         >
@@ -404,7 +401,7 @@
           </div>
         </div>
       </div>
-
+     
       <div class="flex flex-col items-center mt-7">
         <h1 class="text-[24px] text-[#232323]">
           You can also send us an email and we’ll get in <br />
