--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
     </section>
 
     <!-- hero cover  here -->
-    <section id="hero"
+    <section
+      id="hero"
       class="bg-gray-200 h-[60vh] md:h-[100vh] bg-[url('/image/hero-image/asset-1.jpeg')] bg-cover bg-center relative"
     >
       <div
@@ -342,8 +343,7 @@
           </div>
         </div>
 
-
-         <div
+        <div
           id="card"
           class="flex gap-5 bg-white shadow hover:shadow-lg cursor-pointer rounded-lg transition"
         >
@@ -401,7 +401,7 @@
           </div>
         </div>
       </div>
-     
+
       <div class="flex flex-col items-center mt-7">
         <h1 class="text-[24px] text-[#232323]">
           You can also send us an email and we’ll get in <br />
@@ -442,7 +442,7 @@
       </div>
 
       <div>
-        <div class="grid grid-cols-1 md:grid-cols-4 px-10 mt-12 gap-9">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 px-10 mt-12 gap-9">
           <div
             class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer"
           >
@@ -760,13 +760,23 @@
     </section>
 
     <section id="Copyright">
-      <div class="bg-[#001138] flex flex-col md:flex-row justify-between items-center text-gray-400 space-y-[1px]  py-5 md:px-10 px-4 ">
+      <div
+        class="bg-[#001138] flex flex-col md:flex-row justify-between items-center text-gray-400 space-y-[1px] py-5 md:px-10 px-4"
+      >
         <h1>© Copyrights 2018. All Rights Reserved.</h1>
         <ul class="flex flex-wrap gap-5">
-          <li class="hover:text-white transition cursor-pointer duration-1000">About</li>
-          <li class="hover:text-white transition cursor-pointer duration-1000">Solutions</li>
-          <li class="hover:text-white transition cursor-pointer duration-1000">FAQ’s</li>
-          <li class="hover:text-white transition cursor-pointer duration-1000">Contact</li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">
+            About
+          </li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">
+            Solutions
+          </li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">
+            FAQ’s
+          </li>
+          <li class="hover:text-white transition cursor-pointer duration-1000">
+            Contact
+          </li>
         </ul>
       </div>
     </section>
