--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <section id="navbar">
       <div
         class="flex flex-col md:justify-between md:px-16 md:py-10 py-8 md:flex-row justify-center items-center"
