fix logic error in about company

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </section>
 
     <section id="About Us " class="mt-28 md:mb-[100px]">
-      <div class="flex px-9">
+      <div class="flex ">
         <!-- man image here -->
         <div class="hidden md:flex w-1/2">
           <img
@@ -212,7 +212,8 @@
             About Our Company
           </h1>
           <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
-          <p class="md:text-[17px] text-gray-500">
+          <div class="px-6">
+            <p class="md:text-[17px] text-gray-500">
             A tale of a fateful trip that started from this tropic port aboard
             this tiny ship today still wanted by the government they survive as
             soldiers of fortune to a deluxe apartment in the sky moving on up to
@@ -223,18 +224,19 @@
             ever wondered the east side to a deluxe apartment.
           </p>
           <hr class="w-full border-t-1 border-gray-300 my-8 border-solid" />
+          </div>
 
           <!-- icons image here -->
-          <div class="flex gap-6">
+          <div class="flex gap-6  max-w-6xl mx-auto">
             <img
-              class="w-30"
+              class="  w-24"
               src="/image/About-image-icon/vision-1-02.png"
               alt=""
             />
             <div class="border-l border-dashed border-gray-300"></div>
-            <img class="w-30" src="/image/About-image-icon/mision.png" alt="" />
+            <img class="w-24 " src="/image/About-image-icon/mision.png" alt="" />
             <div class="border-l border-dashed border-gray-300"></div>
-            <img class="w-30" src="/image/About-image-icon/Goal.png" alt="" />
+            <img class="w-24 " src="/image/About-image-icon/Goal.png" alt="" />
           </div>
         </div>
       </div>
