--- a/index.html
+++ b/index.html
@@ -244,22 +244,22 @@
 
     <section
       id="service"
-      class="h-[70vh] md:h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed mt-8 md:mt-0"
+      class="h-[70vh] md:h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed mt-8 md:mt-0 w-full"
     >
       <!-- overlay -->
 
-      <div class="absolute inset-0 bg-[#001A57] opacity-50"></div>
+      <div class="absolute inset-0 bg-[#001A57]/50 "></div>
 
       <!-- contant -->
       <div
-        class="text-center absolute top-[50%] left-[50%] transform -translate-x-1/2 -translate-y-1/2"
+        class="absolute flex flex-col items-center justify-center text-center px-4 inset-0 "
       >
-        <h3 class="text-3xl font-bold text-white">
+        <h3 class="text-3xl md:text-4xl font-extrabold text-white md:max-w-4xl max-w-[410px md:leading-relaxed ">
           We provide high quality services & innovative solutions for the
           realiable growth
         </h3>
         <button
-          class="mt-6 bg-[#001A57] hover:bg-[#000F32] text-white py-3 px-8 rounded-lg font-semibold cursor-pointer"
+          class="mt-6 bg-[#001A57] hover:bg-[#000F32] text-white py-3 px-10 rounded-lg font-semibold cursor-pointer transition-all duration-300"
         >
           GET A QUOTES
         </button>
