--- a/index.html
+++ b/index.html
@@ -306,16 +306,18 @@
         class="bg-[url('/image/fixed-image/asset-29.jpeg')] bg-cover bg-center h-[100vh] bg-fixed relative"
       >
         <div
-          class="bg-white absolute top-1/2 left-1/2 md:left-[30%] transform -translate-x-1/2 -translate-y-1/2 md:p-[48px] p-[28px] rounded-lg shadow-lg md:max-w-[600px] text-center"
+          class=" absolute inset-0 flex justify-center items-center md:justify-start md:pl-[10%]"
         >
-          <h2 class="text-gray-500 font-light md:text-xl">
+            <div class="bg-white/90 p-8 md:p-12 rounded-2xl shadow-xl max-w-[400px] md:max-w-xl text-center  ">
+                   <h2 class="text-gray-500 font-light md:text-xl">
             “ A tale of a fateful trip that started from this tropic port aboard
             this tiny ship today still wanted by the government they survive as
             soldiers of fortune to a deluxe apartment in the sky moving on up to
             the east side a family. ”
           </h2>
           <h3 class="pt-6 text-xl">Rashed Ka.</h3>
-          <button class="text-gray-500 text-[16px]">Founder, Mnc Inc.</button>
+          <p class="text-gray-500 text-[16px]">Founder, Mnc Inc.</p>
+            </div>
         </div>
       </div>
     </section>
