--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <div
           class=" absolute inset-0 flex justify-center items-center md:justify-start md:pl-[10%]"
         >
-            <div class="bg-white/90 p-8 md:p-12 rounded-2xl shadow-xl max-w-[400px] md:max-w-xl text-center  ">
+            <div class="bg-white/70 backdrop-blur-md p-8 md:p-12 rounded-2xl shadow-xl max-w-[400px] md:max-w-xl text-center  ">
                    <h2 class="text-gray-500 font-light md:text-xl">
             “ A tale of a fateful trip that started from this tropic port aboard
             this tiny ship today still wanted by the government they survive as
