add overley in info section

--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
       <div
         class="bg-[url('/image/fixed-image/asset-29.jpeg')] bg-cover bg-center h-[100vh] bg-fixed relative"
       >
+
+      <div class="absolute inset-0 bg-black/30"></div>
         <div
           class=" absolute inset-0 flex justify-center items-center md:justify-start md:pl-[10%]"
         >
