--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
           </div>
 
           <div id="cartIcon" class="flex gap-7">
-            <i class="fa-solid fa-cart-shopping"></i>
+            <div class="relative">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span class="bg-white text-[#000F32] w-5 h-5 rounded-full flex justify-center items-center absolute -right-1 -top-2">0</span>
+            </div>
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
         </div>
