--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
 
           <button
-            class="hidden md:block bg-transparent border-2 border-[#001A57] rounded-[5px] px-8 py-1 hover:bg-[#001A57] transition duration-300 cursor-pointer hover:text-white font-medium"
+            class="hidden md:block bg-transparent border-2 border-[#001A57] rounded-[5px] px-8 py-1 hover:bg-[#001A57] transition duration-300 ease-in-out cursor-pointer hover:text-white font-medium"
           >
             GET A QUOTES
           </button>
